--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -38,10 +38,3 @@ p{
   padding: 1em;
   
 }
-html {
-  filter: invert(100%);
-}
-
-html img {
-  filter: invert(100%);
-}
