--- a/src/css/style.css
+++ b/src/css/style.css
@@ -118,10 +118,3 @@ label{
   background-color: aliceblue;
 }
 
-html {
-  filter: invert(100%);
-}
-
-html img {
-  filter: invert(100%);
-}
